[gd_scene load_steps=33 format=3 uid="uid://d1ffrbutvy4e"]

[ext_resource type="Script" path="res://scripts/title_menu.gd" id="1_ads83"]
[ext_resource type="FontFile" uid="uid://jvtdvd72wv06" path="res://consolas.ttf" id="2_aik6n"]
[ext_resource type="Script" path="res://scripts/display_version.gd" id="3_rkemj"]
[ext_resource type="AudioStream" uid="uid://c0p4ukecy1cjj" path="res://sounds/change_cam.wav" id="4_cl3hh"]
[ext_resource type="Texture2D" uid="uid://cl7ngqp6v450t" path="res://textures/Renders/cheese.png" id="4_t4b52"]
[ext_resource type="Texture2D" uid="uid://h1e2tcluwpxe" path="res://textures/Renders/TitleEdams.png" id="5_mtfap"]
[ext_resource type="Texture2D" uid="uid://cabkjb7bh6s8o" path="res://textures/Renders/TitleWithers.png" id="6_xg12t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2ptv6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_27atk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5pxcu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8w5np"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hjsyr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rsbhx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2agt2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_43sp0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_skvns"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2fhuo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eatid"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r1ktc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hm4gd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_md2i8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_56xdr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u1y7x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_omwbc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p6uil"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8peow"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2ud1d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_krr73"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gmwrq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ve4ch"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1pwwm"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_j144y"]

[node name="TitleMenu" type="Control" node_paths=PackedStringArray("title_renders")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ads83")
title_renders = [NodePath("Edams"), NodePath("Cheese"), NodePath("Withers")]
visible_render = 1
metadata/_edit_lock_ = true

[node name="Title" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 130.0
offset_top = 184.0
offset_right = 325.0
offset_bottom = 217.0
theme_override_fonts/normal_font = ExtResource("2_aik6n")
theme_override_font_sizes/normal_font_size = 30
text = "Cheesenaf 2"

[node name="NewGame" type="Button" parent="."]
layout_mode = 0
offset_left = 97.0
offset_top = 396.0
offset_right = 326.0
offset_bottom = 425.0
theme_override_fonts/font = ExtResource("2_aik6n")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_2ptv6")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_27atk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5pxcu")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_8w5np")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_hjsyr")
theme_override_styles/normal = SubResource("StyleBoxEmpty_rsbhx")
alignment = 0

[node name="RichTextLabel" type="RichTextLabel" parent="NewGame"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.5
offset_top = -9.5
offset_right = 82.5
offset_bottom = 9.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("2_aik6n")
theme_override_font_sizes/normal_font_size = 20
text = "New Game"
scroll_active = false

[node name="Continue" type="Button" parent="."]
layout_mode = 0
offset_left = 97.0
offset_top = 425.0
offset_right = 351.0
offset_bottom = 454.0
theme_override_fonts/font = ExtResource("2_aik6n")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_2agt2")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_43sp0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_skvns")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_2fhuo")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_eatid")
theme_override_styles/normal = SubResource("StyleBoxEmpty_r1ktc")
alignment = 0

[node name="RichTextLabel" type="RichTextLabel" parent="Continue"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -8.5
offset_right = 82.0
offset_bottom = 10.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("2_aik6n")
theme_override_font_sizes/normal_font_size = 20
text = "Continue"
scroll_active = false

[node name="CustomNight" type="Button" parent="."]
layout_mode = 0
offset_left = 97.0
offset_top = 455.0
offset_right = 326.0
offset_bottom = 484.0
theme_override_fonts/font = ExtResource("2_aik6n")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_hm4gd")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_md2i8")
theme_override_styles/hover = SubResource("StyleBoxEmpty_56xdr")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_u1y7x")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_omwbc")
theme_override_styles/normal = SubResource("StyleBoxEmpty_p6uil")
alignment = 0

[node name="RichTextLabel" type="RichTextLabel" parent="CustomNight"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.0
offset_top = -10.0
offset_right = 82.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("2_aik6n")
theme_override_font_sizes/normal_font_size = 20
text = "Custom Night"
scroll_active = false

[node name="Extras" type="Button" parent="."]
layout_mode = 0
offset_left = 97.0
offset_top = 485.0
offset_right = 326.0
offset_bottom = 514.0
theme_override_fonts/font = ExtResource("2_aik6n")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_8peow")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_2ud1d")
theme_override_styles/hover = SubResource("StyleBoxEmpty_krr73")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_gmwrq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ve4ch")
theme_override_styles/normal = SubResource("StyleBoxEmpty_1pwwm")
alignment = 0

[node name="RichTextLabel" type="RichTextLabel" parent="Extras"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.0
offset_top = -9.5
offset_right = 82.0
offset_bottom = 9.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("2_aik6n")
theme_override_font_sizes/normal_font_size = 20
text = "Extras
"
scroll_active = false

[node name="Settings" type="Button" parent="."]
layout_mode = 0
offset_left = 97.0
offset_top = 515.0
offset_right = 326.0
offset_bottom = 544.0
theme_override_fonts/font = ExtResource("2_aik6n")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_8peow")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_2ud1d")
theme_override_styles/hover = SubResource("StyleBoxEmpty_krr73")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_gmwrq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ve4ch")
theme_override_styles/normal = SubResource("StyleBoxEmpty_1pwwm")
alignment = 0

[node name="RichTextLabel" type="RichTextLabel" parent="Settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.0
offset_top = -9.5
offset_right = 82.0
offset_bottom = 9.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("2_aik6n")
theme_override_font_sizes/normal_font_size = 20
text = "Settings"
scroll_active = false

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 97.0
offset_top = 570.0
offset_right = 326.0
offset_bottom = 599.0
theme_override_fonts/font = ExtResource("2_aik6n")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_8peow")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_2ud1d")
theme_override_styles/hover = SubResource("StyleBoxEmpty_krr73")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_gmwrq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ve4ch")
theme_override_styles/normal = SubResource("StyleBoxEmpty_1pwwm")
alignment = 0

[node name="RichTextLabel" type="RichTextLabel" parent="Exit"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.0
offset_top = -9.5
offset_right = 82.0
offset_bottom = 9.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("2_aik6n")
theme_override_font_sizes/normal_font_size = 20
text = "Exit Game"
scroll_active = false

[node name="Version" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -24.0
offset_right = 507.0
grow_vertical = 0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("2_aik6n")
theme_override_font_sizes/normal_font_size = 11
bbcode_enabled = true
text = "
[wave]Version abababa"
scroll_active = false
script = ExtResource("3_rkemj")

[node name="HoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_cl3hh")
volume_db = -10.0
autoplay = true
bus = &"SFX"

[node name="Cheese" type="Sprite2D" parent="."]
visible = false
z_index = -2
material = SubResource("CanvasItemMaterial_j144y")
position = Vector2(583, 328)
texture = ExtResource("4_t4b52")

[node name="Edams" type="Sprite2D" parent="."]
visible = false
z_index = -2
material = SubResource("CanvasItemMaterial_j144y")
position = Vector2(727, 362)
scale = Vector2(0.535185, 0.535185)
texture = ExtResource("5_mtfap")

[node name="Withers" type="Sprite2D" parent="."]
visible = false
z_index = -2
material = SubResource("CanvasItemMaterial_j144y")
position = Vector2(727, 362)
scale = Vector2(0.535185, 0.535185)
texture = ExtResource("6_xg12t")

[connection signal="pressed" from="NewGame" to="." method="_start_singleplayer"]
[connection signal="pressed" from="Continue" to="." method="_start_singleplayer" binds= [true]]
[connection signal="pressed" from="CustomNight" to="." method="_change_menu" binds= ["customnight"]]
[connection signal="pressed" from="Extras" to="." method="_change_menu" binds= ["extras"]]
[connection signal="pressed" from="Settings" to="." method="_change_menu" binds= ["settings"]]
[connection signal="pressed" from="Exit" to="." method="_change_menu" binds= ["settings"]]
